[gd_scene load_steps=25 format=3 uid="uid://brf47068ghctn"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_t5sf5"]
[ext_resource type="Resource" uid="uid://qcxoh4lago3k" path="res://scripts/inventory/player_normal_inventory.tres" id="2_anirl"]
[ext_resource type="Resource" uid="uid://43vov6ny3abg" path="res://scripts/inventory/player_implant_inventory.tres" id="3_s841s"]
[ext_resource type="Texture2D" uid="uid://cgol46545su07" path="res://textures/player_spritesheet.png" id="4_nvdvj"]
[ext_resource type="Script" path="res://scripts/player/player_arms.gd" id="5_0xsfp"]
[ext_resource type="Resource" uid="uid://cw45ii2fqvsoq" path="res://scripts/items/utilities/health_stim.tres" id="6_t1hn4"]
[ext_resource type="Resource" uid="uid://7l71cr6j0yyb" path="res://scripts/items/weapons/bullet/service_pistol.tres" id="7_w3pop"]
[ext_resource type="Resource" uid="uid://blxtrfkdvd4o2" path="res://scripts/items/weapons/bullet/sub_machinegun.tres" id="8_61wlt"]
[ext_resource type="Script" path="res://scripts/player/states/state_machine/state_machine.gd" id="10_pxoct"]
[ext_resource type="Script" path="res://scripts/player/states/player_state_idle.gd" id="11_5otbp"]
[ext_resource type="PackedScene" uid="uid://b3mk2eldqln48" path="res://scenes/entities/components/health_component.tscn" id="12_1ptp0"]
[ext_resource type="PackedScene" uid="uid://cpcnnngsn42fw" path="res://scenes/entities/components/hitbox_component.tscn" id="12_bov5g"]
[ext_resource type="Script" path="res://scripts/player/states/player_state_run.gd" id="12_n5gtx"]
[ext_resource type="PackedScene" uid="uid://dpga2pevde8nm" path="res://scenes/ui/reloading_progress_bar.tscn" id="14_413ej"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lw51x"]
size = Vector2(8, 10)

[sub_resource type="Animation" id="Animation_mlqe8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_m42og"]
resource_name = "death"

[sub_resource type="Animation" id="Animation_y60d7"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(10, 0)]
}

[sub_resource type="Animation" id="Animation_1dkh0"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0)]
}

[sub_resource type="Animation" id="Animation_fbmgj"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(9, 0)]
}

[sub_resource type="Animation" id="Animation_ixc0m"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AUDIO/footsteps")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_84kpj"]
_data = {
"RESET": SubResource("Animation_mlqe8"),
"death": SubResource("Animation_m42og"),
"fall": SubResource("Animation_y60d7"),
"idle": SubResource("Animation_1dkh0"),
"jump": SubResource("Animation_fbmgj"),
"run": SubResource("Animation_ixc0m")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qluux"]
random_pitch = 1.2
random_volume_offset_db = 0.2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kml4x"]
size = Vector2(10, 12)

[node name="main_player" type="CharacterBody2D" node_paths=PackedStringArray("player_hands", "footstep_sfx_player") groups=["Player"]]
collision_layer = 2
collision_mask = 129
script = ExtResource("1_t5sf5")
SPEED = 96.0
JUMP_VELOCITY = -320.0
player_hands = NodePath("hands")
normal_inventory = ExtResource("2_anirl")
implant_inventory = ExtResource("3_s841s")
footstep_sfx_player = NodePath("AUDIO/footsteps")

[node name="body" type="Sprite2D" parent="."]
texture = ExtResource("4_nvdvj")
hframes = 11

[node name="hands" type="Node2D" parent="." node_paths=PackedStringArray("holding_sprite", "reload_progress_bar", "weapon_equip_player", "weapon_attack_player", "weapon_reload_player", "weapon_empty_player") groups=["Player"]]
script = ExtResource("5_0xsfp")
holding_sprite = NodePath("holding_item")
utility_item = ExtResource("6_t1hn4")
primary_weapon = ExtResource("7_w3pop")
secondary_weapon = ExtResource("8_61wlt")
max_bullets = 68
max_shells = 42
max_energy = 72
reload_progress_bar = NodePath("../reload_progress_bar")
weapon_equip_player = NodePath("../AUDIO/Weapons/weapon_equip")
weapon_attack_player = NodePath("../AUDIO/Weapons/weapon_attack")
weapon_reload_player = NodePath("../AUDIO/Weapons/weapon_reload")
weapon_empty_player = NodePath("../AUDIO/Weapons/weapon_empty")

[node name="holding_item" type="Sprite2D" parent="hands"]
use_parent_material = true
position = Vector2(4, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lw51x")

[node name="StateMachine" type="Node" parent="." groups=["Player"]]
script = ExtResource("10_pxoct")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("11_5otbp")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("12_n5gtx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_84kpj")
}

[node name="reload_progress_bar" parent="." instance=ExtResource("14_413ej")]
offset_left = -8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = -12.0

[node name="AUDIO" type="Node" parent="."]

[node name="footsteps" type="AudioStreamPlayer" parent="AUDIO"]
stream = SubResource("AudioStreamRandomizer_qluux")
bus = &"SFX"

[node name="Weapons" type="Node" parent="AUDIO"]

[node name="weapon_equip" type="AudioStreamPlayer2D" parent="AUDIO/Weapons"]

[node name="weapon_attack" type="AudioStreamPlayer" parent="AUDIO/Weapons"]
bus = &"SFX"

[node name="weapon_reload" type="AudioStreamPlayer2D" parent="AUDIO/Weapons"]

[node name="weapon_empty" type="AudioStreamPlayer2D" parent="AUDIO/Weapons"]

[node name="health_component" parent="." node_paths=PackedStringArray("hitbox_component") instance=ExtResource("12_1ptp0")]
hitbox_component = NodePath("../hitbox_component")
max_health = 4

[node name="hitbox_component" parent="." instance=ExtResource("12_bov5g")]
collision_layer = 2
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_component"]
shape = SubResource("RectangleShape2D_kml4x")

[connection signal="damage_taken" from="health_component" to="." method="_on_health_component_damage_taken"]
[connection signal="dead" from="health_component" to="." method="_on_health_component_dead"]
